--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,11 +9,7 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/navbar.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-  
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-md5/2.19.0/js/md5.min.js"></script>
-
-
+  <script type="text/javascript" src="js/code.js"></script>
 </head>
 <body>
 
@@ -100,17 +97,11 @@
   </div>
 
   <script>
-document.addEventListener('DOMContentLoaded', function() {});
+    // Initialize tab switching when page loads
+    document.addEventListener('DOMContentLoaded', function() {
+      initializeTabSwitching();
+    });
+  </script>
 
-</script>
-
-
-
-  <script type="text/javascript" src="js/script.js"></script>
-
-
-
-
-  
 </body>
 </html>
