--- a/dashboard.html
+++ b/dashboard.html
@@ -6,7 +6,7 @@
   <title>COP4331 | Dashboard</title>
   <link rel="stylesheet" href="css/dashboard.css" />
   <link rel="stylesheet" href="css/navbar.css" />
-  <script type="text/javascript" src="js/script.js"></script>
+  <script type="text/javascript" src="js/code.js"></script>
   <style>
     
   </style>
